# src/routes/bancoInterno.routes.ts
@@ -1,11 +1,13 @@
 import { Router } from "express";
-import { BancoInternoController } from "../resources/BancoInterno/controllers/BancoInternoController.controller";
 
+import { BancoInternoController } from "../resources/BancoInterno/controllers/BancoInternoController.controller";
 
 const bancoInternoRoutes = Router();
 const bancoInternoController = new BancoInternoController();
 
-bancoInternoRoutes.get("/banco-interno/mocked", bancoInternoController.getMockedInfo)
+bancoInternoRoutes.get(
+  "/banco-interno/mocked",
+  bancoInternoController.getMockedInfo
+);
 
 export default bancoInternoRoutes;
-
